menambah section baru

--- a/index.html
+++ b/index.html
@@ -20,5 +20,11 @@
             <li >Memudahkan kerja</li>
         </ul>
     </section>
+
+    <section>
+        <h2>Pelajari Sekarang
+            <button>Click me</button>
+        </h2>
+    </section>
 </body>
 </html>
