menambahkan satu footer

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
             <button>Click me</button>
         </h2>
     </section>
+
+    <footer>
+        <p>sebuah footer</p>
+    </footer>
 </body>
 </html>
